início da adição de mais produtos

--- a/LojaEstiloWeb/Views/Home/Index.cshtml
+++ b/LojaEstiloWeb/Views/Home/Index.cshtml
@@ -34,9 +34,10 @@
         <section class="py-5">
             <div class="container px-4 px-lg-5 mt-5">
                 <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
-
                     <div class="col mb-5">
                         <div class="card h-100">
+                            <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">
+                                Promoção</div>
                             <!-- Product image-->
                             <img class="card-img-top" src="~/img/produtos/6/mesa-gamer-1.jpg"
                                 alt="Mesa para Escritório Diretor Estilo Industrial 150cm Kuadra" />
@@ -45,8 +46,9 @@
                                 <div class="text-center">
                                     <!-- Product name-->
                                     <h5 class="fw-bolder">Mesa Kuadra 150cm</h5>
+                                    <div class="text-muted text-decoration-line-through">R$430,00</div>
                                     <!-- Product price-->
-                                    R$430,00
+                                    <div class="fw-bold text-success">R$420,00</div>
                                 </div>
                             </div>
                             <!-- Product actions-->
@@ -59,7 +61,7 @@
                     <div class="col mb-5">
                         <div class="card h-100">
                             <!-- Product image-->
-                            <img class="card-img-top" src="~/img/produtos/1-2/mesa-1.webp"
+                            <img class="card-img-top" src="~/img/produtos/6-2/mesa-1.webp"
                                 alt="Mesa Para Computador Gamer Rubi, Branco 156,5 cm" />
                             <!-- Product details-->
                             <div class="card-body p-4">
@@ -82,7 +84,7 @@
                             <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">
                                 Promoção</div>
                             <!-- Product image-->
-                            <img class="card-img-top" src="~/img/produtos/1-3/mesa-1.jpeg"
+                            <img class="card-img-top" src="~/img/produtos/6-3/mesa-1.jpeg"
                                 alt="Mesa Gamer e Escritório XT Racer Space One" />
                             <!-- Product details-->
                             <div class="card-body p-4">
@@ -103,19 +105,16 @@
                     </div>
                     <div class="col mb-5">
                         <div class="card h-100">
-                            <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">
-                                Promoção</div>
                             <!-- Product image-->
-                            <img class="card-img-top" src="~/img/produtos/1-4/mesa-1.jpeg"
-                                alt="Escrivaninha Em L 1 Gaveta Max Zanzini Madeirado/Branco" />
+                            <img class="card-img-top" src="~/img/produtos/6-4/mesa-1.jpeg"
+                                alt="Escrivaninha Em L Max Zanzini" />
                             <!-- Product details-->
                             <div class="card-body p-4">
                                 <div class="text-center">
                                     <!-- Product name-->
-                                    <h5 class="fw-bolder">Escrivaninha Em L 1 Gaveta Max Zanzini Madeirado/Branco</h5>
-                                    <div class="text-muted text-decoration-line-through"> R$349,00</div>
+                                    <h5 class="fw-bolder">Escrivaninha Em L Max Zanzini</h5>
                                     <!-- Product price-->
-                                    <div class="fw-bold text-success">R$331,55</div>
+                                   R$349,00
                                 </div>
                             </div>
                             <!-- Product actions-->
@@ -125,6 +124,7 @@
                             </div>
                         </div>
                     </div>
+                    
                     <div class="col mb-5">
                         <div class="card h-100">
                             <!-- Product image-->
@@ -137,6 +137,100 @@
                                     <h5 class="fw-bolder">Mouse Pad Firelison 2 em 1 </h5>
                                     <!-- Product price-->
                                     R$411,78
+                                </div>
+                            </div>
+                            <!-- Product actions-->
+                            <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
+                                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Ver
+                                        opções</a></div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col mb-5">
+                        <div class="card h-100">
+                            <!-- Product image-->
+                            <img class="card-img-top" src="~/img/produtos/5-4/mousepad-4-2.webp"
+                                alt="Mouse Pad Gamer Criarte, Speed Extra Grande, Abstract Premium, Preto E Branco - 70x30 Cm" />
+                            <!-- Product details-->
+                            <div class="card-body p-4">
+                                <div class="text-center">
+                                    <!-- Product name-->
+                                    <h5 class="fw-bolder">Mouse Pad Gamer Criarte</h5>
+                                    <!-- Product price-->
+                                    R$55,90
+                                </div>
+                            </div>
+                            <!-- Product actions-->
+                            <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
+                                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Ver
+                                        opções</a></div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col mb-5">
+                        <div class="card h-100">
+                            <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">
+                                Promoção</div>
+                            <!-- Product image-->
+                            <img class="card-img-top" src="~/img/produtos/5-3/mousepad-3-1.jpg"
+                                alt="Mousepad Techsource - Topo Black V2" />
+                            <!-- Product details-->
+                            <div class="card-body p-4">
+                                <div class="text-center">
+                                    <!-- Product name-->
+                                    <h5 class="fw-bolder">Mousepad Techsource V2</h5>
+                                    <div class="text-muted text-decoration-line-through"> R$ 181,74</div>
+                                    <!-- Product price-->
+                                    <div class="fw-bold text-success">R$178,54</div>
+                                </div>
+                            </div>
+                            <!-- Product actions-->
+                            <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
+                                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Ver
+                                        opções</a></div>
+                            </div>
+                        </div>
+                    </div>
+                     
+                     <div class="col mb-5">
+                        <div class="card h-100">
+                            <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">
+                                Promoção</div>
+                            <!-- Product image-->
+                            <img class="card-img-top" src="~/img/produtos/5-2/mousepad-3.jpg"
+                                alt="Mouse Pad Corsair MM700 3XL RGB" />
+                            <!-- Product details-->
+                            <div class="card-body p-4">
+                                <div class="text-center">
+                                    <!-- Product name-->
+                                    <h5 class="fw-bolder">Mouse Pad Corsair MM700 3XL RGB</h5>
+                                    <div class="text-muted text-decoration-line-through"> R$ 949,00</div>
+                                    <!-- Product price-->
+                                    <div class="fw-bold text-success">R$759,20</div>
+                                </div>
+                            </div>
+                            <!-- Product actions-->
+                            <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
+                                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Ver
+                                        opções</a></div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col mb-5">
+                        <div class="card h-100">
+                            <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">
+                                Promoção</div>
+                            <!-- Product image-->
+                            <img class="card-img-top" src="~/img/produtos/17-2/monitor-17-2.jpg"
+                                alt="Monitor Gamer Curvo 30" MSI Optix MAG301CR / HDMI x2 / DP / WFHD / 200Hz / 1ms / HDR / MSI RGB Mystic Light" />
+                            <!-- Product details-->
+                            <div class="card-body p-4">
+                                <div class="text-center">
+                                    <!-- Product name-->
+                                    <h5 class="fw-bolder">Monitor MSI MAG301CR 30'', 200Hz</h5>
+                                    <div class="text-muted text-decoration-line-through">R$9,999.00</div>
+                                    <!-- Product price-->
+                                    <div class="fw-bold text-success">R$7,499,99</div>
                                 </div>
                             </div>
                             <!-- Product actions-->
@@ -172,6 +266,78 @@
                     </div>
                     <div class="col mb-5">
                         <div class="card h-100">
+                            <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">
+                                Promoção</div>
+                            <!-- Product image-->
+                            <img class="card-img-top" src="~/img/produtos/17-3/monitor-17-3.jpg"
+                                alt="Monitor GameMax Gamer Curvo 27 Pol 144Hz 1ms Full HD GMX27C144 Branco - Open Box" />
+                            <!-- Product details-->
+                            <div class="card-body p-4">
+                                <div class="text-center">
+                                    <!-- Product name-->
+                                    <h5 class="fw-bolder">Monitor GameMax GMX27C144 27' </h5>
+                                    <div class="text-muted text-decoration-line-through">R$ 1.563,21</div>
+                                    <!-- Product price-->
+                                    <div class="fw-bold text-success">R$ 1.359,32</div>
+                                </div>
+                            </div>
+                            <!-- Product actions-->
+                            <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
+                                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Ver
+                                        opções</a></div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col mb-5">
+                        <div class="card h-100">
+                            <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">
+                                Promoção</div>
+                            <!-- Product image-->
+                            <img class="card-img-top" src="~/img/produtos/17-4/monitor-17-6.jpeg"
+                                alt="Monitor curvo de 34' com tecnologia QD-OLED e AMD FreeSync™ Premium Pro" />
+                            <!-- Product details-->
+                            <div class="card-body p-4">
+                                <div class="text-center">
+                                    <!-- Product name-->
+                                    <h5 class="fw-bolder">Monitor 34'' Curvo QD-OLED, FreeSync Pro </h5>
+                                    <div class="text-muted text-decoration-line-through">R$ 7.399,00</div>
+                                    <!-- Product price-->
+                                    <div class="fw-bold text-success">R$ 6.289,15</div>
+                                </div>
+                            </div>
+                            <!-- Product actions-->
+                            <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
+                                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Ver
+                                        opções</a></div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col mb-5">
+                        <div class="card h-100">
+                            <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">
+                                Promoção</div>
+                            <!-- Product image-->
+                            <img class="card-img-top" src="~/img/produtos/10-3/suporte-monitor-10-3.jpeg"
+                                alt="Suporte de monitor Armstrong DUO Branco - Elements" />
+                            <!-- Product details-->
+                            <div class="card-body p-4">
+                                <div class="text-center">
+                                    <!-- Product name-->
+                                    <h5 class="fw-bolder">Suporte de Monitor Armstrong DUO Branco</h5>
+                                    <div class="text-muted text-decoration-line-through">R$ 1.309,90</div>
+                                    <!-- Product price-->
+                                    <div class="fw-bold text-success">R$ 849,00</div>
+                                </div>
+                            </div>
+                            <!-- Product actions-->
+                            <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
+                                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Ver
+                                        opções</a></div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col mb-5">
+                        <div class="card h-100">
                             <!-- Product image-->
                             <img class="card-img-top" src="~/img/produtos/10/suporte-monitor-1.jpg"
                                 alt="Suporte Articulado Com Pistao a Gas Para Monitor Zinnia Nimbo 100, 17 Pol. a 27 Pol., Branco, ZNO-ZNNBO100-WH01" />
@@ -182,6 +348,53 @@
                                     <h5 class="fw-bolder">Suporte Articulado Zinnia Nimbo 100</h5>
                                     <!-- Product price-->
                                     R$129,99
+                                </div>
+                            </div>
+                            <!-- Product actions-->
+                            <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
+                                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Ver
+                                        opções</a></div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col mb-5">
+                        <div class="card h-100">
+                            <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">
+                                Promoção</div>
+                            <!-- Product image-->
+                            <img class="card-img-top" src="~/img/produtos/10-2/suporte-monitor-10-2.jpeg"
+                                alt="Suporte Para Monitor De Parede A Gás 17 A 32 Articulado Vesa Cor Preto" />
+                            <!-- Product details-->
+                            <div class="card-body p-4">
+                                <div class="text-center">
+                                    <!-- Product name-->
+                                    <h5 class="fw-bolder">Suporte Articulado 17''-32'' VESA </h5>
+                                    <div class="text-muted text-decoration-line-through">R$ 309,99</div>
+                                    <!-- Product price-->
+                                    <div class="fw-bold text-success">R$ 279,99</div>
+                                </div>
+                            </div>
+                            <!-- Product actions-->
+                            <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
+                                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Ver
+                                        opções</a></div>
+                            </div>
+                        </div>
+                    </div>
+                    
+                    
+                    <div class="col mb-5">
+                        <div class="card h-100">
+                            <!-- Product image-->
+                            <img class="card-img-top" src="~/img/produtos/10-4/suporte-monitor-17-4.jpeg"
+                                alt="Suporte De Mesa Duplo Com Pistão A Gás 14 À 32'' Sim-2500 Cor Preto" />
+                            <!-- Product details-->
+                            <div class="card-body p-4">
+                                <div class="text-center">
+                                    <!-- Product name-->
+                                    <h5 class="fw-bolder">Suporte Duplo de Mesa SIM-2500, 14''-32''</h5>
+                                    <!-- Product price-->
+                                    R$295,99
                                 </div>
                             </div>
                             <!-- Product actions-->
