adicionando mais produtos

--- a/LojaEstiloWeb/Views/Home/Index.cshtml
+++ b/LojaEstiloWeb/Views/Home/Index.cshtml
@@ -413,9 +413,78 @@
                             <div class="card-body p-4">
                                 <div class="text-center">
                                     <!-- Product name-->
-                                    <h5 class="fw-bolder">Base Ergonômica Home Goods</h5>
+                                    <h5 class="fw-bolder">Suporte Ergonômica Home Goods</h5>
                                     <!-- Product price-->
                                     R$50,15
+                                </div>
+                            </div>
+                            <!-- Product actions-->
+                            <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
+                                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Ver
+                                        opções</a></div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col mb-5">
+                        <div class="card h-100">
+                            <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">
+                                Promoção</div>
+                            <!-- Product image-->
+                            <img class="card-img-top" src="~/img/produtos/3-2/suporte-3-2.jpeg"
+                                alt="Suporte Dobrável Ergonômico Portátil Slim Para Notebook Tablet Ajustável Luuk Young S50 Prateado" />
+                            <!-- Product details-->
+                            <div class="card-body p-4">
+                                <div class="text-center">
+                                    <!-- Product name-->
+                                    <h5 class="fw-bolder">Suporte Ergonômico Dobrável Luuk Young S50 Prateado</h5>
+                                    <div class="text-muted text-decoration-line-through">R$ 25,99</div>
+                                    <!-- Product price-->
+                                    <div class="fw-bold text-success">R$ 24,11</div>
+                                </div>
+                            </div>
+                            <!-- Product actions-->
+                            <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
+                                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Ver
+                                        opções</a></div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col mb-5">
+                        <div class="card h-100">
+                            <!-- Product image-->
+                            <img class="card-img-top" src="~/img/produtos/3-4/suporte-3-4.jpeg"
+                                alt="Suporte Notebook Aluminio Regulavel Base Giratoria 360º" />
+                            <!-- Product details-->
+                            <div class="card-body p-4">
+                                <div class="text-center">
+                                    <!-- Product name-->
+                                    <h5 class="fw-bolder">Suporte Regulável de Alumínio para Notebook com Base Giratória 360º</h5>
+                                    <!-- Product price-->
+                                    R$115,99
+                                </div>
+                            </div>
+                            <!-- Product actions-->
+                            <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
+                                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Ver
+                                        opções</a></div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col mb-5">
+                        <div class="card h-100">
+                            <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">
+                                Promoção</div>
+                            <!-- Product image-->
+                            <img class="card-img-top" src="~/img/produtos/3-3/suporte-3-3.jpeg"
+                                alt="Suporte Mesa Base Notebook Alumínio Regulável Leitura Cor Preto" />
+                            <!-- Product details-->
+                            <div class="card-body p-4">
+                                <div class="text-center">
+                                    <!-- Product name-->
+                                    <h5 class="fw-bolder">Suporte Regulável de Alumínio para Notebook</h5>
+                                    <div class="text-muted text-decoration-line-through">R$ 101,96</div>
+                                    <!-- Product price-->
+                                    <div class="fw-bold text-success">R$ 79,53</div>
                                 </div>
                             </div>
                             <!-- Product actions-->
@@ -451,6 +520,75 @@
                             <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">
                                 Promoção</div>
                             <!-- Product image-->
+                            <img class="card-img-top" src="~/img/produtos/11-2/led-11-2.jpeg"
+                                alt="Light Bar, Preto, RGB Lightbar, Light Bar Monitor com Tres temperaturas de cor 15 cores modo, Luz Monitor, Led Monitor Light Bar, Barra de Luz para Monitor, Lightbar Monitor, Luminaria Monitor" />
+                            <!-- Product details-->
+                            <div class="card-body p-4">
+                                <div class="text-center">
+                                    <!-- Product name-->
+                                    <h5 class="fw-bolder">Led para monitor, com três temperaturas de cor e 15 modos de cor</h5>
+                                    <div class="text-muted text-decoration-line-through">R$ 189,99</div>
+                                    <!-- Product price-->
+                                    <div class="fw-bold text-success">R$ 199,99</div>
+                                </div>
+                            </div>
+                            <!-- Product actions-->
+                            <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
+                                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Ver
+                                        opções</a></div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col mb-5">
+                        <div class="card h-100">
+                            <!-- Product image-->
+                            <img class="card-img-top" src="~/img/produtos/11-3/led-11-3-4.jpeg"
+                                alt="Baseus Luminária Led Monitor E Notebooks Regulável Cor Preta" />
+                            <!-- Product details-->
+                            <div class="card-body p-4">
+                                <div class="text-center">
+                                    <!-- Product name-->
+                                    <h5 class="fw-bolder">Led para Monitor E Notebooks Regulável </h5>
+                                    <!-- Product price-->
+                                    R$289,99
+                                </div>
+                            </div>
+                            <!-- Product actions-->
+                            <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
+                                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Ver
+                                        opções</a></div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col mb-5">
+                        <div class="card h-100">
+                            <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">
+                                Promoção</div>
+                            <!-- Product image-->
+                            <img class="card-img-top" src="~/img/produtos/11-4/led-11-4.jpeg"
+                                alt="Gugxiom Barra de luz curvada para monitor, lâmpada de monitor de computador, barra de LED para monitor de PC com 3 ajustes de temperatura de cor e 7 cores RGB, luz de monitor óptico assimétrica de 5V" />
+                            <!-- Product details-->
+                            <div class="card-body p-4">
+                                <div class="text-center">
+                                    <!-- Product name-->
+                                    <h5 class="fw-bolder">Barra de Luz LED Curva para Monitor, com 3 temperaturas de cor e 7 cores RGB.</h5>
+                                    <div class="text-muted text-decoration-line-through">R$288,10</div>
+                                    <!-- Product price-->
+                                    <div class="fw-bold text-success">R$ 278,10</div>
+                                </div>
+                            </div>
+                            <!-- Product actions-->
+                            <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
+                                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Ver
+                                        opções</a></div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col mb-5">
+                        <div class="card h-100">
+                            <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">
+                                Promoção</div>
+                            <!-- Product image-->
                             <img class="card-img-top" src="~/img/produtos/8/web-cam-1.jpg"
                                 alt="Web cam aicoco 2k Web Cam Com Microfone Ai Auto Ac610" />
                             <!-- Product details-->
@@ -461,6 +599,72 @@
                                     <div class="text-muted text-decoration-line-through">R$ 649,00</div>
                                     <!-- Product price-->
                                     <div class="fw-bold text-success">R$ 584,10</div>
+                                </div>
+                            </div>
+                            <!-- Product actions-->
+                            <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
+                                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Ver
+                                        opções</a></div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col mb-5">
+                        <div class="card h-100">
+                            <!-- Product image-->
+                            <img class="card-img-top" src="~/img/produtos/8-2/webcam-8-2.jpeg"
+                                alt="Webcam Philips SPL6208 1080P com microfone para streaming de PC" />
+                            <!-- Product details-->
+                            <div class="card-body p-4">
+                                <div class="text-center">
+                                    <!-- Product name-->
+                                    <h5 class="fw-bolder">Webcam Philips com microfone </h5>
+                                    <!-- Product price-->
+                                    R$438,33
+                                </div>
+                            </div>
+                            <!-- Product actions-->
+                            <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
+                                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Ver
+                                        opções</a></div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col mb-5">
+                        <div class="card h-100">
+                            <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">
+                                Promoção</div>
+                            <!-- Product image-->
+                            <img class="card-img-top" src="~/img/produtos/8-3/webcam-8-3.jpeg"
+                                alt="Logitech StreamCam Webcam USB-C Full HD Blanca" />
+                            <!-- Product details-->
+                            <div class="card-body p-4">
+                                <div class="text-center">
+                                    <!-- Product name-->
+                                    <h5 class="fw-bolder">Webcam USB-C Full HD Branca</h5>
+                                    <div class="text-muted text-decoration-line-through">R$ 732,18</div>
+                                    <!-- Product price-->
+                                    <div class="fw-bold text-success">R$ 658,96</div>
+                                </div>
+                            </div>
+                            <!-- Product actions-->
+                            <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
+                                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Ver
+                                        opções</a></div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col mb-5">
+                        <div class="card h-100">
+                            <!-- Product image-->
+                            <img class="card-img-top" src="~/img/produtos/8-4/webcam-8-4.jpeg"
+                                alt="1080p Full Hd Usb Webcam Para PC Desktop Laptop Web Camera Com Microfone Fhd - HUOGUO" />
+                            <!-- Product details-->
+                            <div class="card-body p-4">
+                                <div class="text-center">
+                                    <!-- Product name-->
+                                    <h5 class="fw-bolder">Webcam 1080p Full HD com microfone - HUOGUO</h5>
+                                    <!-- Product price-->
+                                    R$375,00
                                 </div>
                             </div>
                             <!-- Product actions-->
@@ -485,6 +689,72 @@
                                     <div class="text-muted text-decoration-line-through">R$649,00</div>
                                     <!-- Product price-->
                                     <div class="fw-bold text-success">R$554,22</div>
+                                </div>
+                            </div>
+                            <!-- Product actions-->
+                            <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
+                                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Ver
+                                        opções</a></div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col mb-5">
+                        <div class="card h-100">
+                            <!-- Product image-->
+                            <img class="card-img-top" src="~/img/produtos/1-2/tecaldo-1-2-3.jpeg"
+                                alt="Teclado Gamer Semi - Mecânico Rise Mode G1 Rgb Ptbr (Branco)" />
+                            <!-- Product details-->
+                            <div class="card-body p-4">
+                                <div class="text-center">
+                                    <!-- Product name-->
+                                    <h5 class="fw-bolder">Teclado Gamer Semi - Mecânico</h5>
+                                    <!-- Product price-->
+                                    R$69,90
+                                </div>
+                            </div>
+                            <!-- Product actions-->
+                            <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
+                                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Ver
+                                        opções</a></div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col mb-5">
+                        <div class="card h-100">
+                            <!-- Product image-->
+                            <img class="card-img-top" src="~/img/produtos/1-3/teclado-1-3.jpeg"
+                                alt="Attack Shark Ajazz AK820 Teclado mecânico para jogos com botão 75% teclado Hot Swappable Tipo-C com fio junta com 5 camadas de espuma absorvente de ruído branco LED retroiluminado NKRO interruptor" />
+                            <!-- Product details-->
+                            <div class="card-body p-4">
+                                <div class="text-center">
+                                    <!-- Product name-->
+                                    <h5 class="fw-bolder">Teclado mecânico Attack Shark Ajazz AK820 com LED branco e NKRO</h5>
+                                    <!-- Product price-->
+                                    R$349,00
+                                </div>
+                            </div>
+                            <!-- Product actions-->
+                            <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
+                                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Ver
+                                        opções</a></div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col mb-5">
+                        <div class="card h-100">
+                            <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">
+                                Promoção</div>
+                            <!-- Product image-->
+                            <img class="card-img-top" src="~/img/produtos/1-4/teclado-1-4.webp"
+                                alt="TECLADO EPOMAKER RT100" />
+                            <!-- Product details-->
+                            <div class="card-body p-4">
+                                <div class="text-center">
+                                    <!-- Product name-->
+                                    <h5 class="fw-bolder">Teclado EPOMAKER RT100</h5>
+                                    <div class="text-muted text-decoration-line-through">R$729,00</div>
+                                    <!-- Product price-->
+                                    <div class="fw-bold text-success">R$629,22</div>
                                 </div>
                             </div>
                             <!-- Product actions-->
